2019-05-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/fx.c (WaveImage): Use float for sin map.

	* configure.ac: Test for float versions of math functions.

	* magick/gem.c (GenerateDifferentialNoise): Use float versions of
	math functions when available.

2019-05-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* www/INSTALL-unix.rst: Expanded configure documentation for
	--with-modules.  Added specific configure documentation for
	--with-umem and --with-mtmalloc, which may be useful on
	Solaris-derived systems.

2019-04-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c (VersionCommand): Show OpenMP specification
	version corresponding to version enumeration.

	* magick/locale.c (GetLocaleMessageFromTag): Eliminate clang
	warning about comparison with a constant value.

	* magick/log.c (InitializeLogInfo): Initialize LogInfo log_configured.

2019-04-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/magic.c (struct): Ajust StaticMagic definition to be more
	const-friendly.

	* magick/color_lookup.c (struct): Adjust StaticColors definition
	to be more const-friendly.

	* magick/attribute.c: Ajust tag_table definition to be more
	const-friendly.

	* magick/log.c: Allocate LogInfo from heap as we used to do.

	* magick/locale.c (GetLocaleMessageFromTag): Adaptations to locale
	coder output changes.

	* coders/locale.c (WriteLOCALEImage): Adjust locale coder output
	to be more const.

2019-04-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/color_lookup.c: Make built-in color tables fully const.

	* magick/animate.c: Use MagickXTextViewWidgetNDL() to display help
	text.

	* magick/display.c: Use MagickXTextViewWidgetNDL() to display help
	text.

	* magick/widget.c (MagickXTextViewWidgetNDL): New private function
	to display multi-line null-delimited text in an X11 widget.

	* coders/xwd.c (ReadXWDImage): Added even more XWD header
	validation logic.  Addresses problems noted by email from Hongxu