@@ -1,5 +1,5 @@
 /*
-% Copyright (C) 2003 - 2018 GraphicsMagick Group
+% Copyright (C) 2003 - 2019 GraphicsMagick Group
 % Copyright (C) 2003 ImageMagick Studio
 % Copyright 1991-1999 E. I. du Pont de Nemours and Company
 %
@@ -644,13 +644,13 @@ MagickExport MagickPassFail RGBTransformImage(Image *image,
           for (i=0; i <= (long) MaxMap; i++)
             {
               xform.x[i].x=(0.33333f*(float) i);
-              xform.y[i].x=(0.33334f*(float) i);
-              xform.z[i].x=(0.33333f*(float) i);
               xform.x[i].y=(0.5f*(float) i);
-              xform.y[i].y=(0.0f);
-              xform.z[i].y=((-0.5f)*(float) i);
               xform.x[i].z=((-0.25f)*(float) i);
+              xform.y[i].x=(0.33334f*(float) i);
+              xform.y[i].y=(0.0f);
               xform.y[i].z=(0.5f*(float) i);
+              xform.z[i].x=(0.33333f*(float) i);
+              xform.z[i].y=((-0.5f)*(float) i);
               xform.z[i].z=((-0.25f)*(float) i);
             }
           break;
@@ -675,25 +675,25 @@ MagickExport MagickPassFail RGBTransformImage(Image *image,
           for (i=0; i <= (long) (0.018*MaxMap); i++)
             {
               xform.x[i].x=(0.003962014134275617*i);
-              xform.y[i].x=(0.007778268551236748*i);
-              xform.z[i].x=(0.001510600706713781*i);
               xform.x[i].y=((-0.002426619775463276)*i);
-              xform.y[i].y=((-0.004763965913702149)*i);
-              xform.z[i].y=(0.007190585689165425*i);
               xform.x[i].z=(0.006927257754597858*i);
+              xform.y[i].x=(0.007778268551236748*i);
+              xform.y[i].y=((-0.004763965913702149)*i);
               xform.y[i].z=((-0.005800713697502058)*i);
+              xform.z[i].x=(0.001510600706713781*i);
+              xform.z[i].y=(0.007190585689165425*i);
               xform.z[i].z=((-0.0011265440570958)*i);
             }
           for ( ; i <= (long) MaxMap; i++)
             {
               xform.x[i].x=(0.2201118963486454*(1.099*i-0.099));
-              xform.y[i].x=(0.4321260306242638*(1.099*i-0.099));
-              xform.z[i].x=(0.08392226148409894*(1.099*i-0.099));
               xform.x[i].y=((-0.1348122097479598)*(1.099*i-0.099));
-              xform.y[i].y=((-0.2646647729834528)*(1.099*i-0.099));
-              xform.z[i].y=(0.3994769827314126*(1.099*i-0.099));
               xform.x[i].z=(0.3848476530332144*(1.099*i-0.099));
+              xform.y[i].x=(0.4321260306242638*(1.099*i-0.099));
+              xform.y[i].y=((-0.2646647729834528)*(1.099*i-0.099));
               xform.y[i].z=((-0.3222618720834477)*(1.099*i-0.099));
+              xform.z[i].x=(0.08392226148409894*(1.099*i-0.099));
+              xform.z[i].y=(0.3994769827314126*(1.099*i-0.099));
               xform.z[i].z=((-0.06258578094976668)*(1.099*i-0.099));
             }
           break;
@@ -715,13 +715,13 @@ MagickExport MagickPassFail RGBTransformImage(Image *image,
           for (i=0; i <= (long) MaxMap; i++)
             {
               xform.x[i].x=(0.412453f*(float) i);
-              xform.y[i].x=(0.35758f*(float) i);
-              xform.z[i].x=(0.180423f*(float) i);
               xform.x[i].y=(0.212671f*(float) i);
-              xform.y[i].y=(0.71516f*(float) i);
-              xform.z[i].y=(0.072169f*(float) i);
               xform.x[i].z=(0.019334f*(float) i);
+              xform.y[i].x=(0.35758f*(float) i);
+              xform.y[i].y=(0.71516f*(float) i);
               xform.y[i].z=(0.119193f*(float) i);
+              xform.z[i].x=(0.180423f*(float) i);
+              xform.z[i].y=(0.072169f*(float) i);
               xform.z[i].z=(0.950227f*(float) i);
             }
           break;
@@ -747,18 +747,15 @@ MagickExport MagickPassFail RGBTransformImage(Image *image,
 #endif
           for (i=0; i <= (long) MaxMap; i++)
             {
-              /* Red */
-              xform.x[i].x=(0.299f*(float) i);
-              xform.y[i].x=(0.587f*(float) i);
-              xform.z[i].x=(0.114f*(float) i);
-              /* Green */
-              xform.x[i].y=((-0.16873f)*(float) i);
-              xform.y[i].y=((-0.331264f)*(float) i);
-              xform.z[i].y=(0.500000f*(float) i);
-              /* Blue */
-              xform.x[i].z=(0.500000f*(float) i);
-              xform.y[i].z=((-0.418688f)*(float) i);
-              xform.z[i].z=((-0.081312f)*(float) i);
+              xform.x[i].x=(0.299f*(float) i); /* Red */
+              xform.x[i].y=((-0.16873f)*(float) i); /* Green */
+              xform.x[i].z=(0.500000f*(float) i); /* Blue */
+              xform.y[i].x=(0.587f*(float) i); /* Red */
+              xform.y[i].y=((-0.331264f)*(float) i); /* Green */
+              xform.y[i].z=((-0.418688f)*(float) i); /* Blue */
+              xform.z[i].x=(0.114f*(float) i); /* Red */
+              xform.z[i].y=(0.500000f*(float) i); /* Green */
+              xform.z[i].z=((-0.081312f)*(float) i); /* Blue */
             }
           break;
         }
@@ -783,18 +780,15 @@ MagickExport MagickPassFail RGBTransformImage(Image *image,
 #endif
           for (i=0; i <= (long) MaxMap; i++)
             {
-              /* Red */
-              xform.x[i].x=(0.212600f*(float) i);
-              xform.y[i].x=(0.715200f*(float) i);
-              xform.z[i].x=(0.072200f*(float) i);
-              /* Green */
-              xform.x[i].y=((-0.114572f)*(float) i);
-              xform.y[i].y=((-0.385428f)*(float) i);
-              xform.z[i].y=(0.500000f*(float) i);
-              /* Blue */
-              xform.x[i].z=(0.500000f*(float) i);
-              xform.y[i].z=((-0.454153f)*(float) i);
-              xform.z[i].z=((-0.045847f)*(float) i);
+              xform.x[i].x=(0.212600f*(float) i); /* Red */
+              xform.x[i].y=((-0.114572f)*(float) i); /* Green */
+              xform.x[i].z=(0.500000f*(float) i); /* Blue */
+              xform.y[i].x=(0.715200f*(float) i); /* Red */
+              xform.y[i].y=((-0.385428f)*(float) i); /* Green */
+              xform.y[i].z=((-0.454153f)*(float) i); /* Blue */
+              xform.z[i].x=(0.072200f*(float) i); /* Red */
+              xform.z[i].y=(0.500000f*(float) i); /* Green */
+              xform.z[i].z=((-0.045847f)*(float) i); /* Blue */
             }
           break;
         }
@@ -818,25 +812,25 @@ MagickExport MagickPassFail RGBTransformImage(Image *image,
           for (i=0; i <= (long) (0.018*MaxMap); i++)
             {
               xform.x[i].x=(0.003962014134275617*i);
-              xform.y[i].x=(0.007778268551236748*i);
-              xform.z[i].x=(0.001510600706713781*i);
               xform.x[i].y=((-0.002426619775463276)*i);
-              xform.y[i].y=((-0.004763965913702149)*i);
-              xform.z[i].y=(0.007190585689165425*i);
               xform.x[i].z=(0.006927257754597858*i);
+              xform.y[i].x=(0.007778268551236748*i);
+              xform.y[i].y=((-0.004763965913702149)*i);
               xform.y[i].z=((-0.005800713697502058)*i);
+              xform.z[i].x=(0.001510600706713781*i);
+              xform.z[i].y=(0.007190585689165425*i);
               xform.z[i].z=((-0.0011265440570958)*i);
             }
           for ( ; i <= (long) MaxMap; i++)
             {
               xform.x[i].x=(0.2201118963486454*(1.099*i-0.099));
-              xform.y[i].x=(0.4321260306242638*(1.099*i-0.099));
-              xform.z[i].x=(0.08392226148409894*(1.099*i-0.099));
               xform.x[i].y=((-0.1348122097479598)*(1.099*i-0.099));
-              xform.y[i].y=((-0.2646647729834528)*(1.099*i-0.099));
-              xform.z[i].y=(0.3994769827314126*(1.099*i-0.099));
               xform.x[i].z=(0.3848476530332144*(1.099*i-0.099));
+              xform.y[i].x=(0.4321260306242638*(1.099*i-0.099));
+              xform.y[i].y=((-0.2646647729834528)*(1.099*i-0.099));
               xform.y[i].z=((-0.3222618720834477)*(1.099*i-0.099));
+              xform.z[i].x=(0.08392226148409894*(1.099*i-0.099));
+              xform.z[i].y=(0.3994769827314126*(1.099*i-0.099));
               xform.z[i].z=((-0.06258578094976668)*(1.099*i-0.099));
             }
           break;
@@ -863,13 +857,13 @@ MagickExport MagickPassFail RGBTransformImage(Image *image,
           for (i=0; i <= (long) MaxMap; i++)
             {
               xform.x[i].x=(0.299f*(float) i);
-              xform.y[i].x=(0.587f*(float) i);
-              xform.z[i].x=(0.114f*(float) i);
               xform.x[i].y=(0.596f*(float) i);
-              xform.y[i].y=((-0.274f)*(float) i);
-              xform.z[i].y=((-0.322f)*(float) i);
               xform.x[i].z=(0.211f*(float) i);
+              xform.y[i].x=(0.587f*(float) i);
+              xform.y[i].y=((-0.274f)*(float) i);
               xform.y[i].z=((-0.523f)*(float) i);
+              xform.z[i].x=(0.114f*(float) i);
+              xform.z[i].y=((-0.322f)*(float) i);
               xform.z[i].z=(0.312f*(float) i);
             }
           break;
@@ -896,13 +890,13 @@ MagickExport MagickPassFail RGBTransformImage(Image *image,
           for (i=0; i <= (long) MaxMap; i++)
             {
               xform.x[i].x=(0.299f*(float) i);
-              xform.y[i].x=(0.587f*(float) i);
-              xform.z[i].x=(0.114f*(float) i);
               xform.x[i].y=((-0.168736f)*(float) i);
-              xform.y[i].y=((-0.331264f)*(float) i);
-              xform.z[i].y=(0.5f*(float) i);
               xform.x[i].z=(0.5f*(float) i);
+              xform.y[i].x=(0.587f*(float) i);
+              xform.y[i].y=((-0.331264f)*(float) i);
               xform.y[i].z=((-0.418688f)*(float) i);
+              xform.z[i].x=(0.114f*(float) i);
+              xform.z[i].y=(0.5f*(float) i);
               xform.z[i].z=((-0.081312f)*(float) i);
             }
           break;
@@ -930,13 +924,13 @@ MagickExport MagickPassFail RGBTransformImage(Image *image,
           for (i=0; i <= (long) MaxMap; i++)
             {
               xform.x[i].x=(0.299f*(float) i);
-              xform.y[i].x=(0.587f*(float) i);
-              xform.z[i].x=(0.114f*(float) i);
               xform.x[i].y=((-0.1474f)*(float) i);
-              xform.y[i].y=((-0.2895f)*(float) i);
-              xform.z[i].y=(0.4369f*(float) i);
               xform.x[i].z=(0.615f*(float) i);
+              xform.y[i].x=(0.587f*(float) i);
+              xform.y[i].y=((-0.2895f)*(float) i);
               xform.y[i].z=((-0.515f)*(float) i);
+              xform.z[i].x=(0.114f*(float) i);
+              xform.z[i].y=(0.4369f*(float) i);
               xform.z[i].z=((-0.1f)*(float) i);
             }
           break;
@@ -1687,15 +1681,15 @@ MagickExport MagickPassFail TransformRGBImage(Image *image,
 #endif
           for (i=0; i <= (long) MaxMap; i++)
             {
-              xform.r[i].r=((float) i);
-              xform.g[i].r=(0.5f*(2.0f*(float) i-MaxMapFloat));
-              xform.b[i].r=((-0.33334f)*(2.0f*(float) i-MaxMapFloat));
-              xform.r[i].g=((float) i);
-              xform.g[i].g=(0.0f);
-              xform.b[i].g=(0.666665f*(2.0f*(float) i-MaxMapFloat));
-              xform.r[i].b=((float) i);
-              xform.g[i].b=((-0.5f)*(2.0f*(float) i-MaxMapFloat));
               xform.b[i].b=((-0.33334f)*(2.0f*(float) i-MaxMapFloat));
+              xform.b[i].g=(0.666665f*(2.0f*(float) i-MaxMapFloat));
+              xform.b[i].r=((-0.33334f)*(2.0f*(float) i-MaxMapFloat));
+              xform.g[i].b=((-0.5f)*(2.0f*(float) i-MaxMapFloat));
+              xform.g[i].g=(0.0f);
+              xform.g[i].r=(0.5f*(2.0f*(float) i-MaxMapFloat));
+              xform.r[i].b=((float) i);
+              xform.r[i].g=((float) i);
+              xform.r[i].r=((float) i);
             }
           break;
         }
@@ -1719,15 +1713,15 @@ MagickExport MagickPassFail TransformRGBImage(Image *image,
 #endif
           for (i=0; i <= (long) MaxMap; i++)
             {
-              xform.r[i].r=(1.40200f*(float) i);
-              xform.g[i].r=(0.0f);
-              xform.b[i].r=(1.88000f*((float) i-ScaleCharToMap(137)));
-              xform.r[i].g=(1.40200f*(float) i);
-              xform.g[i].g=((-0.444066f)*((float) i-ScaleCharToMap(156)));
-              xform.b[i].g=((-0.95692f)*((float) i-ScaleCharToMap(137)));
-              xform.r[i].b=(1.40200f*(float) i);
-              xform.g[i].b=(2.28900f*((float) i-ScaleCharToMap(156)));
               xform.b[i].b=(0.0f);
+              xform.b[i].g=((-0.95692f)*((float) i-ScaleCharToMap(137)));
+              xform.b[i].r=(1.88000f*((float) i-ScaleCharToMap(137)));
+              xform.g[i].b=(2.28900f*((float) i-ScaleCharToMap(156)));
+              xform.g[i].g=((-0.444066f)*((float) i-ScaleCharToMap(156)));
+              xform.g[i].r=(0.0f);
+              xform.r[i].b=(1.40200f*(float) i);
+              xform.r[i].g=(1.40200f*(float) i);
+              xform.r[i].r=(1.40200f*(float) i);
             }
           break;
         }
@@ -1747,15 +1741,15 @@ MagickExport MagickPassFail TransformRGBImage(Image *image,
 #endif
           for (i=0; i <= (long) MaxMap; i++)
             {
-              xform.r[i].r=(3.240479f*(float) i);
-              xform.g[i].r=((-1.537150f)*(float) i);
-              xform.b[i].r=((-0.498535f)*(float) i);
-              xform.r[i].g=((-0.969256f)*(float) i);
-              xform.g[i].g=(1.875992f*(float) i);
-              xform.b[i].g=(0.041556f*(float) i);
-              xform.r[i].b=(0.055648f*(float) i);
-              xform.g[i].b=((-0.204043f)*(float) i);
               xform.b[i].b=(1.057311f*(float) i);
+              xform.b[i].g=(0.041556f*(float) i);
+              xform.b[i].r=((-0.498535f)*(float) i);
+              xform.g[i].b=((-0.204043f)*(float) i);
+              xform.g[i].g=(1.875992f*(float) i);
+              xform.g[i].r=((-1.537150f)*(float) i);
+              xform.r[i].b=(0.055648f*(float) i);
+              xform.r[i].g=((-0.969256f)*(float) i);
+              xform.r[i].r=(3.240479f*(float) i);
             }
           break;
         }
@@ -1780,18 +1774,15 @@ MagickExport MagickPassFail TransformRGBImage(Image *image,
 #endif
           for (i=0; i <= (long) MaxMap; i++)
             {
-              /* Y */
-              xform.r[i].r=((float) i);
-              xform.g[i].r=(0.0f);
-              xform.b[i].r=((1.402000f*0.5f)*(2.0f*(float) i-MaxMapFloat));
-              /* Pb */
-              xform.r[i].g=((float) i);
-              xform.g[i].g=((-0.344136f*0.5f)*(2.0f*(float) i-MaxMapFloat));
-              xform.b[i].g=((-0.714136f*0.5f)*(2.0f*(float) i-MaxMapFloat));
-              /* Pr */
-              xform.r[i].b=((float) i);
-              xform.g[i].b=((1.772000f*0.5f)*(2.0f*(float) i-MaxMapFloat));
-              xform.b[i].b=(0.0f);
+              xform.b[i].b=(0.0f); /* Pr */
+              xform.b[i].g=((-0.714136f*0.5f)*(2.0f*(float) i-MaxMapFloat)); /* Pb */
+              xform.b[i].r=((1.402000f*0.5f)*(2.0f*(float) i-MaxMapFloat)); /* Y */
+              xform.g[i].b=((1.772000f*0.5f)*(2.0f*(float) i-MaxMapFloat)); /* Pr */
+              xform.g[i].g=((-0.344136f*0.5f)*(2.0f*(float) i-MaxMapFloat)); /* Pb */
+              xform.g[i].r=(0.0f); /* Y */
+              xform.r[i].b=((float) i); /* Pr */
+              xform.r[i].g=((float) i); /* Pb */
+              xform.r[i].r=((float) i); /* Y */
             }
           break;
         }
@@ -1814,18 +1805,15 @@ MagickExport MagickPassFail TransformRGBImage(Image *image,
 #endif
           for (i=0; i <= (long) MaxMap; i++)
             {
-              /* Y */
-              xform.r[i].r=((float) i);
-              xform.g[i].r=(0.0f);
-              xform.b[i].r=((1.5748f*0.5f)*(2.0f*(float) i-MaxMapFloat));
-              /* Pb */
-              xform.r[i].g=((float) i);
-              xform.g[i].g=((-0.187324f*0.5f)*(2.0f*(float) i-MaxMapFloat));
-              xform.b[i].g=((-0.468124f*0.5f)*(2.0f*(float) i-MaxMapFloat));
-              /* Pr */
-              xform.r[i].b=((float) i);
-              xform.g[i].b=((1.8556f*0.5f)*(2.0f*(float) i- MaxMapFloat));
-              xform.b[i].b=(0.0f);
+              xform.b[i].b=(0.0f); /* Pr */
+              xform.b[i].g=((-0.468124f*0.5f)*(2.0f*(float) i-MaxMapFloat)); /* Pb */
+              xform.b[i].r=((1.5748f*0.5f)*(2.0f*(float) i-MaxMapFloat)); /* Y */
+              xform.g[i].b=((1.8556f*0.5f)*(2.0f*(float) i- MaxMapFloat)); /* Pr */
+              xform.g[i].g=((-0.187324f*0.5f)*(2.0f*(float) i-MaxMapFloat)); /* Pb */
+              xform.g[i].r=(0.0f); /* Y */
+              xform.r[i].b=((float) i); /* Pr */
+              xform.r[i].g=((float) i); /* Pb */
+              xform.r[i].r=((float) i); /* Y */
             }
           break;
         }
@@ -1851,15 +1839,15 @@ MagickExport MagickPassFail TransformRGBImage(Image *image,
 #endif
           for (i=0; i <= (long) MaxMap; i++)
             {
-              xform.r[i].r=(1.3584f*(float) i);
-              xform.g[i].r=(0.0f);
-              xform.b[i].r=(1.8215f*((float) i-ScaleCharToMap(137)));
-              xform.r[i].g=(1.3584f*(float) i);
-              xform.g[i].g=((-0.4302726f)*((float) i-ScaleCharToMap(156)));
-              xform.b[i].g=((-0.9271435f)*((float) i-ScaleCharToMap(137)));
-              xform.r[i].b=(1.3584f*i);
-              xform.g[i].b=(2.2179f*((float) i-ScaleCharToMap(156)));
               xform.b[i].b=(0.0f);
+              xform.b[i].g=((-0.9271435f)*((float) i-ScaleCharToMap(137)));
+              xform.b[i].r=(1.8215f*((float) i-ScaleCharToMap(137)));
+              xform.g[i].b=(2.2179f*((float) i-ScaleCharToMap(156)));
+              xform.g[i].g=((-0.4302726f)*((float) i-ScaleCharToMap(156)));
+              xform.g[i].r=(0.0f);
+              xform.r[i].b=(1.3584f*i);
+              xform.r[i].g=(1.3584f*(float) i);
+              xform.r[i].r=(1.3584f*(float) i);
             }
           break;
         }
@@ -1882,15 +1870,15 @@ MagickExport MagickPassFail TransformRGBImage(Image *image,
 #endif
           for (i=0; i <= (long) MaxMap; i++)
             {
-              xform.r[i].r=((float) i);
-              xform.g[i].r=(0.4781f*(2.0f*(float) i-MaxMapFloat));
-              xform.b[i].r=(0.3107f*(2.0f*(float) i-MaxMapFloat));
-              xform.r[i].g=((float) i);
-              xform.g[i].g=((-0.13635f)*(2.0f*(float) i-MaxMapFloat));
-              xform.b[i].g=((-0.3234f)*(2.0f*(float) i-MaxMapFloat));
-              xform.r[i].b=((float) i);
-              xform.g[i].b=((-0.55185f)*(2.0f*(float) i-MaxMapFloat));
               xform.b[i].b=(0.8503f*(2.0f*(float) i-MaxMapFloat));
+              xform.b[i].g=((-0.3234f)*(2.0f*(float) i-MaxMapFloat));
+              xform.b[i].r=(0.3107f*(2.0f*(float) i-MaxMapFloat));
+              xform.g[i].b=((-0.55185f)*(2.0f*(float) i-MaxMapFloat));
+              xform.g[i].g=((-0.13635f)*(2.0f*(float) i-MaxMapFloat));
+              xform.g[i].r=(0.4781f*(2.0f*(float) i-MaxMapFloat));
+              xform.r[i].b=((float) i);
+              xform.r[i].g=((float) i);
+              xform.r[i].r=((float) i);
             }
           break;
         }
@@ -1913,15 +1901,15 @@ MagickExport MagickPassFail TransformRGBImage(Image *image,
 #endif
           for (i=0; i <= (long) MaxMap; i++)
             {
-              xform.r[i].r=((float) i);
-              xform.g[i].r=(0.0f);
-              xform.b[i].r=(0.701f*(2.0f*(float) i-MaxMapFloat));
-              xform.r[i].g=((float) i);
-              xform.g[i].g=((-0.172068f)*(2.0f*(float) i-MaxMapFloat));
-              xform.b[i].g=(0.357068f*(2.0f*(float) i-MaxMapFloat));
-              xform.r[i].b=((float) i);
-              xform.g[i].b=(0.886f*(2.0f*(float) i-MaxMapFloat));
               xform.b[i].b=(0.0f);
+              xform.b[i].g=(0.357068f*(2.0f*(float) i-MaxMapFloat));
+              xform.b[i].r=(0.701f*(2.0f*(float) i-MaxMapFloat));
+              xform.g[i].b=(0.886f*(2.0f*(float) i-MaxMapFloat));
+              xform.g[i].g=((-0.172068f)*(2.0f*(float) i-MaxMapFloat));
+              xform.g[i].r=(0.0f);
+              xform.r[i].b=((float) i);
+              xform.r[i].g=((float) i);
+              xform.r[i].r=((float) i);
             }
           break;
         }
@@ -1945,15 +1933,15 @@ MagickExport MagickPassFail TransformRGBImage(Image *image,
 #endif
           for (i=0; i <= (long) MaxMap; i++)
             {
-              xform.r[i].r=((float) i);
-              xform.g[i].r=(0.0f);
-              xform.b[i].r=(0.5699f*(2.0f*(float) i-MaxMapFloat));
-              xform.r[i].g=((float) i);
-              xform.g[i].g=((-0.1969f)*(2.0f*(float) i-MaxMapFloat));
-              xform.b[i].g=((-0.29025f)*(2.0f*(float) i-MaxMapFloat));
-              xform.r[i].b=((float) i);
-              xform.g[i].b=(1.01395f*(2.0f*(float) i-MaxMapFloat));
               xform.b[i].b=(0.0f);
+              xform.b[i].g=((-0.29025f)*(2.0f*(float) i-MaxMapFloat));
+              xform.b[i].r=(0.5699f*(2.0f*(float) i-MaxMapFloat));
+              xform.g[i].b=(1.01395f*(2.0f*(float) i-MaxMapFloat));
+              xform.g[i].g=((-0.1969f)*(2.0f*(float) i-MaxMapFloat));
+              xform.g[i].r=(0.0f);
+              xform.r[i].b=((float) i);
+              xform.r[i].g=((float) i);
+              xform.r[i].r=((float) i);
             }
           break;
         }
