@@ -38,6 +38,8 @@
 <p>2019-05-05  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>magick/colorspace.c: Reorder initialization of colorspace tables
+for a possible performance improvement.</li>
 <li>magick/fx.c (WaveImage): Use float for sin map.</li>
 <li>configure.ac: Test for float versions of math functions.</li>
 <li>magick/gem.c (GenerateDifferentialNoise): Use float versions of
